[package]
name = "win32-multimedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
winapi = { version = "0.3.9", features = ["mmeapi"] }
windows = { version = "0.48.0", features = ["Media_Devices", "Devices_Enumeration", "Foundation_Collections", "Media_Audio", "Win32_Media_Multimedia", "Win32_Media_Audio", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com", "Win32_Foundation",
    "Win32_Devices",
    "Win32_Devices_DeviceQuery",
    "Win32_Devices_Enumeration",
    "Win32_Media_Audio_Apo",
    "Win32_Media_Audio_DirectMusic",
    "Win32_Media_Audio_DirectSound",
    "Win32_Media_Audio_Endpoints",
    "Win32_Media_Audio_XAudio2",
    "Win32_Media_DeviceManager",
    "Win32_System_ClrHosting",
    "Win32_System_Com_CallObj",
    "Win32_System_Com_ChannelCredentials",
    "Win32_System_Com_Events",
    "Win32_System_Com_Marshal",
    "Win32_System_Com_UI",
    "Win32_Devices_FunctionDiscovery"
] }


